refs #1887 Cleanup of translation files

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -23,9 +23,10 @@
 # http://www.powerfolder.com
 #
 
-#orig#about_dialog.check_for_updates.key=C
+##about_dialog.app_description={APPDESCRIPTION}
+#orig#about_dialog.check_for_updates.key=U
 about_dialog.check_for_updates.key=U
-#orig#about_dialog.check_for_updates.text=Check
+#orig#about_dialog.check_for_updates.text=Updates
 about_dialog.check_for_updates.text=Updates
 #orig#about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 about_dialog.check_for_updates.tips=Nach Software Updates suchen
@@ -57,8 +58,6 @@ about_dialog.send_bug_report.text=Melden
 about_dialog.send_bug_report.tips=Einen Fehler melden
 #orig#about_dialog.support=Support
 about_dialog.support=Support
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=Sync your World
 #orig#about_dialog.system_monitor.key=M
 about_dialog.system_monitor.key=M
 #orig#about_dialog.system_monitor.text=Monitor
@@ -848,11 +847,12 @@ estimation.unknown=unbekannt
 exp_computer_view.account=Benutzer\: {0}
 #orig#exp_computer_view.collapse=Collapse computer details
 exp_computer_view.collapse=Computer Details zuklappen
+#orig#exp_computer_view.connected_text=Connected
+exp_computer_view.connected_text=Verbunden
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=Computer Details aufklappen
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
 exp_computer_view.last_seen_text=Zuletzt Online\: {0}
-exp_computer_view.connected_text=Verbunden
 #orig#exp_computer_view.no_login=Not logged in
 exp_computer_view.no_login=Nicht angemeldet
 #orig#exp_computer_view.node_friend_connected_text=Connected friend computer
@@ -926,7 +926,7 @@ file_details_panel.modified_by=Ge\u00e4ndert von
 file_details_panel.modified_date=Ge\u00e4ndert am
 #orig#file_details_panel.name=Name
 file_details_panel.name=Name
-#orig#file_details_panel.newer_available=Newer version available
+#orig#file_details_panel.newer_available=Newer version available ({0})
 file_details_panel.newer_available=Neuere Version verf\u00fcgbar ({0})
 #orig#file_details_panel.normal=Local available
 file_details_panel.normal=Lokal verf\u00fcgbar
@@ -964,6 +964,8 @@ file_version_tab.no_versions_available=Dateihistorie nicht verf\u00fcgbar
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=Datum
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 #orig#file_versions_table_model.size=Size
 file_versions_table_model.size=Gr\u00f6\u00dfe
 #orig#file_versions_table_model.version=Version
@@ -1187,7 +1189,7 @@ folders_list.online_folders=Online Folder
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=Keine Folder verf\u00fcgbar
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro={APPNAME} kaufen
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=Es ist notwendig {APPNAME} zu erwerben oder die Nutzung zu verringern.
@@ -1277,6 +1279,8 @@ general.folder=Folder
 general.folder_name=Name
 #orig#general.friday=Friday
 general.friday=Freitag
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=Stunden
 #orig#general.inviter=Inviter
@@ -1339,6 +1343,7 @@ general.thursday=Donnerstag
 general.time=%02d\:%02d\:%02d
 #orig#general.today=Today
 general.today=Heute
+#orig#general.tomorrow=Tomorrow
 general.tomorrow=Morgen
 #orig#general.transfer_mode=Transfer mode
 general.transfer_mode=Transfer Modus
@@ -1413,14 +1418,17 @@ home_tab.online_storage.title=Benutzerkonto
 #orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 home_tab.online_storage.usage=Online Nutzung\: {0} ({1}%)
 ##home_tab.status=Status
-#orig#home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.sync_eta=Voraussichtlich synchronisiert: {0}
-home_tab.sync_unknown=Voraussichtlich synchronisiert: unbekannt
-#orig#home_tab.synchronizing=Synchronization in progress...
+#orig#home_tab.sync_eta=Estimated synchronized\: {0}
+home_tab.sync_eta=Voraussichtlich synchronisiert\: {0}
+#orig#home_tab.sync_unknown=Estimated synchronized\: Unknown
+home_tab.sync_unknown=Voraussichtlich synchronisiert\: unbekannt
+#orig#home_tab.synchronizing.0=Synchronization in progress.
 home_tab.synchronizing.0=Synchronisation l\u00e4uft.
+#orig#home_tab.synchronizing.1=Synchronization in progress..
 home_tab.synchronizing.1=Synchronisation l\u00e4uft..
+#orig#home_tab.synchronizing.2=Synchronization in progress...
 home_tab.synchronizing.2=Synchronisation l\u00e4uft...
-#orig#home_tab.tell_friend.text=Tell a friend about {APPNAME}
+#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.text={APPNAME} weiterempfehlen
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.tell_friend.tip=Klick um einem Freund oder Freundin zu {APPNAME} einladen
@@ -1494,8 +1502,8 @@ low_memory.error.text={APPNAME} ben\u00f6tigt eine gr\u00f6\u00dfere Speicherkon
 low_memory.error.title=Kein Hauptspeicher
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Einstellungen erh\u00f6hen
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
-low_memory.text={APPNAME} steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\n{APPNAME} kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.\n\nMehr informationen unter:\n{0}
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
+low_memory.text={APPNAME} steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\n{APPNAME} kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.\n\nMehr informationen unter\:\n{0}
 #orig#low_memory.title=Low memory
 low_memory.title=Wenig Hauptspeicher
 
@@ -1718,13 +1726,19 @@ preferences.dialog.exit_behavior=Beim Schlie\u00dfen von {APPNAME}
 preferences.dialog.exit_behavior.exit=Programm beenden
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=in den Systembereich minimieren
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 #orig#preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.folder_sync_text=Warnung nach Tag
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_warn.use=Warnen wenn Folder nicht synchronisiert wurden
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=Allgemein
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=LAN IP Liste
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1897,7 +1911,7 @@ pro.home_tab.remaining={0} Tag(e) \u00fcbrig
 pro.home_tab.remaining.tips=Ihre Lizenz wird in {0} auslaufen
 #orig#pro.home_tab.renew_license=Renew {APPNAME}
 pro.home_tab.renew_license=Lizenz verl\u00e4ngern
-#orig#pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.home_tab.upgrade_powerfolder={APPNAME} bestellen
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Verbindungen werden \u00fcber HTTP geschleust
@@ -2001,7 +2015,7 @@ pro.wizard.activation.computers_allowed=Erlaubte Computer\:
 pro.wizard.activation.computers_found=Gefundene Computer\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=Bitte best\u00e4tigen Sie folgende Aktivierungsdaten.
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=Kontakt zum {APPNAME} Support
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=Ung\u00fcltiger Lizenzschl\u00fcssel
@@ -2035,7 +2049,7 @@ pro.wizard.activation.number_of_computers=Erlaubte Computer
 pro.wizard.activation.one_key_available=Login erfolgreich. Ein Lizenzschl\u00fcssel gefunden
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=Hier weitere Lizenzschl\u00fcssel bestellen
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now={APPNAME} hier bestellen
 #orig#pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_confirm=Passwort best\u00e4tigen
@@ -2161,6 +2175,9 @@ settings_tab.move_error.other=Fehler beim Verschieben des Speicherorts\:\n{0}
 settings_tab.move_error.temp=Tempor\u00e4res Verzeichnis konnte nicht erstellt werden.
 #orig#settings_tab.move_error.title=Error moving folder contents
 settings_tab.move_error.title=Fehler beim Verschieben der Inhalte
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 #orig#settings_tab.preview_warning_convert=Convert
 settings_tab.preview_warning_convert=Umwandeln
 #orig#settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
@@ -2316,10 +2333,15 @@ transfer.problem.transfer.exception=\u00dcbertragungsproblem\: {0}
 
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=Automatisch herunterladen
+#orig#transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
 transfer_mode.automatic_synchronization.name=Auto sync (jede Minute)
+#orig#transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 Minuten)
+#orig#transfer_mode.backup_source.name=Backup source (5 minutes)
 transfer_mode.backup_source.name=Backup Quelle (5 Minuten)
+#orig#transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_source_hour.name=Backup Quelle (jede Stunde)
+#orig#transfer_mode.backup_target.name=Backup target
 transfer_mode.backup_target.name=Backup Ziel
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=Eigener Modus
@@ -2332,7 +2354,7 @@ transfer_mode.manual_synchronization.name=Manuell synchronisieren
 #orig#transfer_mode.no_sync.name=No synchronization
 transfer_mode.no_sync.name=Keine Synchronisation
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=Fertig {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Kopiere Daten
@@ -2356,7 +2378,7 @@ transfers.remote_hashing=Vorbereiten
 transfers.requested=Angefordert
 #orig#transfers.searching=Searching...
 transfers.searching=Suche...
-#orig#transfers.swarm=Swarm\: {0} members
+#orig#transfers.swarm=Multi\: {0} sources
 transfers.swarm=Multi\: {0} Quellen
 #orig#transfers.to=To
 transfers.to=Zu
@@ -2560,8 +2582,10 @@ wizard.login_online_storage.no_os=Nur direkter Sync. Dateien nicht online speich
 wizard.login_online_storage.remember_password=Passwort merken
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -2572,7 +2596,6 @@ wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 #orig#wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_folder_setup.no_name.text=Kein Name f\u00fcr {0} eingegeben
