--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -23,8 +23,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
+##about_dialog.app_description={APPDESCRIPTION}
+##about_dialog.check_for_updates.key=U
+##about_dialog.check_for_updates.text=Updates
 ##about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=\u5354\u529b
@@ -50,8 +51,6 @@ about_dialog.power_folder.used=\u4f7f\u7528\u30e1\u30e2\u30ea\: {0}MB
 ##about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=\u30b5\u30dd\u30fc\u30c8
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=\u3042\u306a\u305f\u306e\u4e16\u754c\u3092\u540c\u671f\u3055\u305b\u307e\u3057\u3087\u3046
 ##about_dialog.system_monitor.key=M
 ##about_dialog.system_monitor.text=Monitor
 ##about_dialog.system_monitor.tips=Display a system monitor panel
@@ -564,6 +563,7 @@ estimation.unknown=\u4e0d\u660e
 
 ##exp_computer_view.account=User\: {0}
 ##exp_computer_view.collapse=Collapse computer details
+##exp_computer_view.connected_text=Connected
 ##exp_computer_view.expand=Expand computer details
 ##exp_computer_view.last_seen_text=Last seen online\: {0}
 ##exp_computer_view.no_login=Not logged in
@@ -604,7 +604,7 @@ estimation.unknown=\u4e0d\u660e
 ##file_details_panel.modified_by=Modified by
 ##file_details_panel.modified_date=Modified on
 ##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
+##file_details_panel.newer_available=Newer version available ({0})
 ##file_details_panel.normal=Local available
 ##file_details_panel.not_available=Not available
 ##file_details_panel.status=Status
@@ -633,6 +633,8 @@ file_info.remote_deleted=\u66f4\u65b0\u7248 \u4ed6\u30e6\u30fc\u30b6\u30fc\u306b
 ##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 ##file_versions_table_model.size=Size
 ##file_versions_table_model.version=Version
 
@@ -776,7 +778,7 @@ folder_remove.dialog.title=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0 {0} \u3092
 
 ##folders_tab.no_folders_available=No folders available
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=PowerFolder Pro \u306e\u8cfc\u5165
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=Pro \u7248\u306b\u30a2\u30c3\u30d7\u30b0\u30ec\u30fc\u30c9\u3059\u308b\u304b\u4f7f\u7528\u91cf\u3092\u6e1b\u3089\u3059\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
@@ -859,6 +861,8 @@ general.folder=\u30d5\u30a9\u30eb\u30c0
 general.folder_name=\u540d\u524d
 #orig#general.friday=Friday
 general.friday=\u91d1\u66dc\u65e5
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=\u6642\u9593
 #orig#general.inviter=Inviter
@@ -961,10 +965,12 @@ general.yesterday=\u6628\u65e5
 ##home_tab.online_storage.title=Account
 ##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 ##home_tab.status=Status
-##home_tab.sync_eta=All folders will be synchronized {0}
-##home_tab.sync_unknown=Synchronization date unknown
-##home_tab.synchronizing=Synchronization in progress...
-##home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_eta=Estimated synchronized\: {0}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+##home_tab.tell_friend.text=Tell someone about {APPNAME}
 ##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 ##home_tab.total={0} total
 ##home_tab.you_have=You have
@@ -1030,7 +1036,7 @@ low_memory.do_nothing=\u4f55\u3082\u3057\u306a\u3044
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u30e1\u30e2\u30ea\u3092\u5897\u3084\u3059
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=PowerFolder \u304c\u5229\u7528\u53ef\u80fd\u30e1\u30e2\u30ea\u91cf\u3092\u4f7f\u3044\u5207\u308a\u307e\u3057\u305f\u3002\n\nPowerFolder \u306f\u5229\u7528\u53ef\u80fd\u30e1\u30e2\u30ea\u91cf\u306e\u5897\u52a0\u3092\u8a66\u307f\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
 #orig#low_memory.title=Low memory
 low_memory.title=\u904e\u5c11\u30e1\u30e2\u30ea
@@ -1237,11 +1243,17 @@ preferences.dialog.exit_behavior=[\u9589\u3058\u308b]\u30dc\u30bf\u30f3\u3092\u6
 preferences.dialog.exit_behavior.exit=\u30d7\u30ed\u30b0\u30e9\u30e0\u3092\u7d42\u4e86
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=\u30b7\u30b9\u30c6\u30e0\u30c8\u30ec\u30a4\u306b\u6700\u5c0f\u5316
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 ##preferences.dialog.folder_sync_text=Warning day(s)
 ##preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=\u5168 \u822c
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=LAN IP \u30ea\u30b9\u30c8
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1382,7 +1394,7 @@ pro.download_csv.name=CSV \u3068\u3057\u3066\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 ##pro.home_tab.remaining={0} day(s) remaining
 ##pro.home_tab.remaining.tips=Your license will expire in {0} days
 ##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 #orig#pro.http.options.directconnect=Direct connection to Internet
@@ -1464,7 +1476,7 @@ pro.wizard.activation.computers_allowed=\u8a8d\u53ef\u30b3\u30f3\u30d4\u30e5\u30
 pro.wizard.activation.computers_found=\u767a\u898b\u30b3\u30f3\u30d4\u30e5\u30fc\u30bf\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=\u6b21\u306e\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30b7\u30e7\u30f3\u30c7\u30fc\u30bf\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=PowerFolder \u30b5\u30dd\u30fc\u30c8\u306b\u30b3\u30f3\u30bf\u30af\u30c8
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=\u7121\u52b9\u306a\u30e9\u30a4\u30bb\u30f3\u30b9\u30fb\u30ad\u30fc
@@ -1495,7 +1507,7 @@ pro.wizard.activation.number_of_computers=\u8a8d\u53ef\u30b3\u30f3\u30d4\u30e5\u
 pro.wizard.activation.one_key_available=\u30ed\u30b0\u30a4\u30f3\u6210\u529f\u3002\u30e9\u30a4\u30bb\u30f3\u30b9\u30fb\u30ad\u30fc\u30921\u3064\u53d6\u5f97\u3057\u307e\u3057\u305f\u3002
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=\u8ffd\u52a0\u30e9\u30a4\u30bb\u30f3\u30b9\u3092\u30aa\u30fc\u30c0\u30fc\u3059\u308b\u306b\u306f\u3053\u3053\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=PowerFolder Pro \u3092\u30aa\u30fc\u30c0\u30fc\u3059\u308b\u306b\u306f\u3053\u3053\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044
 ##pro.wizard.activation.password_confirm=Confirm
 ##pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
@@ -1583,6 +1595,9 @@ send_invitation.placetostore=\u62db\u5f85\u72b6\u3092\u4fdd\u5b58\u3059\u308b\u5
 ##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 ##settings_tab.move_error.temp=Could not create temporary folder
 ##settings_tab.move_error.title=Error moving folder contents
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 ##settings_tab.preview_warning_convert=Convert
 ##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 ##settings_tab.preview_warning_title=Convert
@@ -1698,12 +1713,11 @@ transfer.problem.temp.file.write=\u4e00\u6642\u30d5\u30a1\u30a4\u30eb\u3078\u306
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=\u8ee2\u9001\u306b\u95a2\u3059\u308b\u4f8b\u5916\u304c\u767a\u751f\: {0}
 
-##transfer_mode.auto_download_friends.name=Auto-download friends
 ##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 ##transfer_mode.custom.name=Custom profile
 ##transfer_mode.disabled.name=Disabled
@@ -1711,7 +1725,7 @@ transfer.problem.transfer.exception=\u8ee2\u9001\u306b\u95a2\u3059\u308b\u4f8b\u
 ##transfer_mode.manual_synchronization.name=Manual synchronization
 ##transfer_mode.no_sync.name=No synchronization
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=\u5b8c\u4e86 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u30c7\u30fc\u30bf\u30b3\u30d4\u30fc\u4e2d
@@ -1735,7 +1749,7 @@ transfers.remote_hashing=\u6e96\u5099\u4e2d
 transfers.requested=\u8981\u6c42
 #orig#transfers.searching=Searching...
 transfers.searching=\u691c\u7d22\u4e2d...
-##transfers.swarm=Swarm\: {0} members
+##transfers.swarm=Multi\: {0} sources
 #orig#transfers.to=To
 transfers.to=\u9001\u308a\u5148
 #orig#transfers.verifying=Finalizing
@@ -1886,8 +1900,10 @@ wizard.load_invitation.select_file=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb(.i
 ##wizard.login_online_storage.remember_password=Remember password
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u540c\u671f\u30d5\u30a9\u30eb\u30c0\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -1898,7 +1914,6 @@ wizard.login_online_storage.setup_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
