--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -23,8 +23,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
+##about_dialog.app_description={APPDESCRIPTION}
+##about_dialog.check_for_updates.key=U
+##about_dialog.check_for_updates.text=Updates
 ##about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=\u0421\u043e\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044e\u0449\u0438\u0435
@@ -50,8 +51,6 @@ about_dialog.power_folder.used=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\
 ##about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=\u041f\u043e\u0434\u0434\u0435\u0440\u0436\u043a\u0430
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0439 \u041c\u0438\u0440
 ##about_dialog.system_monitor.key=M
 ##about_dialog.system_monitor.text=Monitor
 ##about_dialog.system_monitor.tips=Display a system monitor panel
@@ -564,6 +563,7 @@ estimation.unknown=\u043d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u043e
 
 ##exp_computer_view.account=User\: {0}
 ##exp_computer_view.collapse=Collapse computer details
+##exp_computer_view.connected_text=Connected
 ##exp_computer_view.expand=Expand computer details
 ##exp_computer_view.last_seen_text=Last seen online\: {0}
 ##exp_computer_view.no_login=Not logged in
@@ -604,7 +604,7 @@ estimation.unknown=\u043d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u043e
 ##file_details_panel.modified_by=Modified by
 ##file_details_panel.modified_date=Modified on
 ##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
+##file_details_panel.newer_available=Newer version available ({0})
 ##file_details_panel.normal=Local available
 ##file_details_panel.not_available=Not available
 ##file_details_panel.status=Status
@@ -633,6 +633,8 @@ file_info.remote_deleted=\u0411\u043e\u043b\u0435\u0435 \u043d\u043e\u0432\u0430
 ##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 ##file_versions_table_model.size=Size
 ##file_versions_table_model.version=Version
 
@@ -776,7 +778,7 @@ folder_remove.dialog.title=\u0412\u044b \u0445\u043e\u0442\u0438\u0442 \u0443\u0
 
 ##folders_tab.no_folders_available=No folders available
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=\u041a\u0443\u043f\u0438\u0442\u044c Pro \u0432\u0435\u0440\u0441\u0438\u044e PowerFolder
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=\u0422\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435 \u0434\u043e \u0432\u0435\u0440\u0441\u0438\u0438 Pro \u0438\u043b\u0438 \u0431\u043e\u043b\u0435\u0435 \u0440\u0435\u0434\u043a\u043e\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043d\u0438\u0435 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u044b.
@@ -858,6 +860,8 @@ general.folder=\u041f\u0430\u043f\u043a\u0430
 general.folder_name=\u0418\u043c\u044f
 #orig#general.friday=Friday
 general.friday=\u041f\u044f\u0442\u043d\u0438\u0446\u0430
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=\u0427\u0430\u0441\u043e\u0432
 #orig#general.inviter=Inviter
@@ -960,10 +964,12 @@ general.yesterday=\u0432\u0447\u0435\u0440\u0430
 ##home_tab.online_storage.title=Account
 ##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 ##home_tab.status=Status
-##home_tab.sync_eta=All folders will be synchronized {0}
-##home_tab.sync_unknown=Synchronization date unknown
-##home_tab.synchronizing=Synchronization in progress...
-##home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_eta=Estimated synchronized\: {0}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+##home_tab.tell_friend.text=Tell someone about {APPNAME}
 ##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 ##home_tab.total={0} total
 ##home_tab.you_have=You have
@@ -1029,7 +1035,7 @@ low_memory.do_nothing=\u041d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u043f\u
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u0423\u0432\u0435\u043b\u0438\u0447\u0438\u0442\u044c \u043f\u0430\u043c\u044f\u0442\u044c
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=PowerFolder \u0438\u0437\u0440\u0430\u0441\u0445\u043e\u0434\u043e\u0432\u0430\u043b \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0443\u044e \u043f\u0430\u043c\u044f\u0442\u044c.\n\nPowerFolder \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u0435\u0434\u043f\u0440\u0438\u043d\u044f\u0442\u044c \u043f\u043e\u043f\u044b\u0442\u043a\u0443 \u0443\u0432\u0435\u043b\u0438\u0447\u0438\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0443\u044e \u043f\u0430\u043c\u044f\u0442\u044c.
 #orig#low_memory.title=Low memory
 low_memory.title=\u041d\u0435\u0434\u043e\u0441\u0442\u0430\u0442\u043e\u0447\u043d\u043e \u043f\u0430\u043c\u044f\u0442\u0438
@@ -1236,11 +1242,17 @@ preferences.dialog.exit_behavior=\u041f\u0440\u0438 \u0437\u0430\u043a\u0440\u04
 preferences.dialog.exit_behavior.exit=\u0432\u044b\u0439\u0442\u0438 \u0438\u0437 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u044b
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=\u0443\u043c\u0435\u043d\u044c\u0448\u0438\u0442\u044c \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u043e\u043c \u0442\u0440\u0435\u0435
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 ##preferences.dialog.folder_sync_text=Warning day(s)
 ##preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=\u041e\u0431\u0449\u0438\u0438
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=\u0421\u043f\u0438\u0441\u043e\u043a IP-\u0430\u0434\u0440\u0435\u0441\u043e\u0432 \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0439 \u0441\u0435\u0442\u0438 (LAN)
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1381,7 +1393,7 @@ pro.download_csv.name=\u0421\u043a\u0430\u0447\u0438\u0432\u0430\u0442\u044c \u0
 ##pro.home_tab.remaining={0} day(s) remaining
 ##pro.home_tab.remaining.tips=Your license will expire in {0} days
 ##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 #orig#pro.http.options.directconnect=Direct connection to Internet
@@ -1466,7 +1478,7 @@ pro.wizard.activation.computers_allowed=\u0420\u0430\u0437\u0440\u0435\u0448\u04
 pro.wizard.activation.computers_found=\u041d\u0430\u0439\u0434\u0435\u043d\u043e \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u043e\u0432\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u044d\u0442\u0438 \u0434\u0430\u043d\u043d\u044b\u0435 \u0430\u043a\u0442\u0438\u0432\u0430\u0446\u0438\u0438.
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=\u0421\u0432\u044f\u0437\u0430\u0442\u044c\u0441\u044f \u0441 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u043a\u043e\u0439 PowerFolder
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=\u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u043e\u043d\u043d\u044b\u0439 \u043a\u043b\u044e\u0447
@@ -1497,7 +1509,7 @@ pro.wizard.activation.number_of_computers=\u0420\u0430\u0437\u0440\u0435\u0448\u
 pro.wizard.activation.one_key_available=\u0412\u0445\u043e\u0434 \u0443\u0441\u043f\u0435\u0448\u0435\u043d. \u0415\u0441\u0442\u044c \u043e\u0434\u0438\u043d \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u043e\u043d\u043d\u044b\u0439 \u043a\u043b\u044e\u0447.
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=\u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u0441\u044e\u0434\u0430 \u0447\u0442\u043e\u0431\u044b \u0437\u0430\u043a\u0430\u0437\u0430\u0442\u044c \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0435 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u0438
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=\u043d\u0430\u0436\u043c\u0438\u0442\u0435 \u0441\u044e\u0434\u0430 \u0447\u0442\u043e\u0431\u044b \u0437\u0430\u043a\u0430\u0437\u0430\u0442\u044c PowerFolder Pro
 ##pro.wizard.activation.password_confirm=Confirm
 ##pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
@@ -1585,6 +1597,9 @@ send_invitation.placetostore=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u
 ##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 ##settings_tab.move_error.temp=Could not create temporary folder
 ##settings_tab.move_error.title=Error moving folder contents
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 ##settings_tab.preview_warning_convert=Convert
 ##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 ##settings_tab.preview_warning_title=Convert
@@ -1701,12 +1716,11 @@ transfer.problem.transfer.broken=\u041f\u0435\u0440\u0435\u0434\u0430\u0447\u043
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u043e \u0438\u0441\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u0435 \u043f\u0435\u0440\u0435\u043c\u0435\u0449\u0435\u043d\u0438\u044f TransferException\: {0}
 
-##transfer_mode.auto_download_friends.name=Auto-download friends
 ##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 ##transfer_mode.custom.name=Custom profile
 ##transfer_mode.disabled.name=Disabled
@@ -1714,7 +1728,7 @@ transfer.problem.transfer.exception=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u
 ##transfer_mode.manual_synchronization.name=Manual synchronization
 ##transfer_mode.no_sync.name=No synchronization
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=\u0433\u043e\u0442\u043e\u0432\u043e {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
@@ -1738,7 +1752,7 @@ transfers.remote_hashing=\u041e\u0436\u0438\u0434\u0430\u043d\u0438\u0435 \u0437
 transfers.requested=\u0437\u0430\u043f\u0440\u043e\u0448\u0435\u043d\u043e
 #orig#transfers.searching=Searching...
 transfers.searching=\u0418\u0434\u0435\u0442 \u043f\u043e\u0438\u0441\u043a...
-##transfers.swarm=Swarm\: {0} members
+##transfers.swarm=Multi\: {0} sources
 #orig#transfers.to=To
 transfers.to=\u041a
 #orig#transfers.verifying=Finalizing
@@ -1891,8 +1905,10 @@ wizard.load_invitation.select_file=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0
 ##wizard.login_online_storage.remember_password=Remember password
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043e\u0431\u044b\u0447\u043d\u0443\u044e \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0437\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u0443\u044e \u043f\u0430\u043f\u043a\u0443.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -1903,7 +1919,6 @@ wizard.login_online_storage.setup_default=\u0421\u043e\u0437\u0434\u0430\u0442\u
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
