--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -23,9 +23,10 @@
 # http://www.powerfolder.com
 #
 
-#orig#about_dialog.check_for_updates.key=C
+##about_dialog.app_description={APPDESCRIPTION}
+#orig#about_dialog.check_for_updates.key=U
 about_dialog.check_for_updates.key=C
-#orig#about_dialog.check_for_updates.text=Check
+#orig#about_dialog.check_for_updates.text=Updates
 about_dialog.check_for_updates.text=\u68c0\u67e5
 #orig#about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 about_dialog.check_for_updates.tips=\u68c0\u67e5PowerFolder\u66f4\u65b0
@@ -57,8 +58,6 @@ about_dialog.send_bug_report.text=\u9519\u8bef\u62a5\u544a
 about_dialog.send_bug_report.tips=\u53d1\u9001\u9519\u8bef\u62a5\u544a\u7ed9PowerFolder
 #orig#about_dialog.support=Support
 about_dialog.support=\u652f\u6301
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=\u540c\u6b65\u4f60\u7684\u4e16\u754c
 #orig#about_dialog.system_monitor.key=M
 about_dialog.system_monitor.key=M
 #orig#about_dialog.system_monitor.text=Monitor
@@ -867,6 +866,7 @@ estimation.unknown=\u672a\u77e5
 exp_computer_view.account=\u7528\u6237\: {0}
 #orig#exp_computer_view.collapse=Collapse computer details
 exp_computer_view.collapse=\u9690\u85cf\u8ba1\u7b97\u673a\u8be6\u60c5
+##exp_computer_view.connected_text=Connected
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=\u5c55\u5f00\u8ba1\u7b97\u673a\u8be6\u60c5
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
@@ -945,7 +945,7 @@ file_details_panel.modified_by=\u4fee\u6539\u8005
 file_details_panel.modified_date=\u4fee\u6539\u65f6\u95f4
 #orig#file_details_panel.name=Name
 file_details_panel.name=\u540d\u79f0
-#orig#file_details_panel.newer_available=Newer version available
+#orig#file_details_panel.newer_available=Newer version available ({0})
 file_details_panel.newer_available=\u5b58\u5728\u65b0\u7248\u672c
 #orig#file_details_panel.normal=Local available
 file_details_panel.normal=\u672c\u5730\u5b58\u5728
@@ -986,6 +986,8 @@ file_version_tab.size=\u5927\u5c0f\: {0}
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=\u65e5\u671f
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 #orig#file_versions_table_model.size=Size
 file_versions_table_model.size=\u5927\u5c0f
 #orig#file_versions_table_model.version=Version
@@ -1210,7 +1212,7 @@ folders_list.online_folders=\u5728\u7ebf\u6587\u4ef6\u5939
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=\u6ca1\u6709\u53ef\u7528\u7684\u6587\u4ef6\u5939
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=\u4f60\u9700\u8981\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u6216\u51cf\u5c11\u4f7f\u7528\u7387\u3002
@@ -1303,6 +1305,8 @@ general.folder=\u6587\u4ef6\u5939
 general.folder_name=\u540d\u79f0
 #orig#general.friday=Friday
 general.friday=\u661f\u671f\u4e94
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=\u5c0f\u65f6
 #orig#general.inviter=Inviter
@@ -1446,12 +1450,13 @@ home_tab.online_storage.title=\u8d26\u6237
 #orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 home_tab.online_storage.usage=\u5728\u7ebf\u4f7f\u7528\u7387\: {0} ({1}%)
 ##home_tab.status=Status
-#orig#home_tab.sync_eta=All folders will be synchronized {0}
+#orig#home_tab.sync_eta=Estimated synchronized\: {0}
 home_tab.sync_eta=\u6240\u6709\u5c06\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939 {0}
-##home_tab.sync_unknown=Synchronization date unknown
-#orig#home_tab.synchronizing=Synchronization in progress...
-home_tab.synchronizing=\u6b63\u5728\u5904\u7406\u540c\u6b65...
-#orig#home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.text=\u5411\u670b\u53cb\u4ecb\u7ecdPowerFolder
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.tell_friend.tip=\u70b9\u51fb\u8fd9\u91cc\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u9080\u8bf7\u670b\u53cb\u4f7f\u7528PowerFolder
@@ -1527,7 +1532,7 @@ low_memory.error.text=\u6839\u636e\u4f60\u7684\u914d\u7f6e\uff0cPowerFolder\u970
 low_memory.error.title=\u5185\u5b58\u6ea2\u51fa
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u589e\u52a0\u5185\u5b58
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=PowerFolder\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u5c1d\u8bd5\u589e\u52a0\u53ef\u7528\u5185\u5b58\u3002
 #orig#low_memory.title=Low memory
 low_memory.title=\u5185\u5b58\u4e0d\u8db3
@@ -1772,13 +1777,19 @@ preferences.dialog.exit_behavior=\u5173\u95ed\u7a97\u53e3
 preferences.dialog.exit_behavior.exit=\u9000\u51fa\u7a0b\u5e8f
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=\u6700\u5c0f\u5316\u5230\u7cfb\u7edf\u6258\u76d8
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 #orig#preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.folder_sync_text=\u8b66\u544a\u5929\u6570
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_warn.use=\u5982\u679c\u6587\u4ef6\u5939\u6ca1\u6709\u540c\u6b65\uff0c\u8fdb\u884c\u8b66\u544a
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=\u4e00\u822c
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=\u5c40\u57df\u7f51IP\u5217\u8868
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1956,7 +1967,7 @@ pro.home_tab.remaining=\u5269\u4f59 {0} \u5929
 pro.home_tab.remaining.tips=\u4f60\u7684\u6388\u6743\u5c06\u5728 {0} \u540e\u8fc7\u671f
 #orig#pro.home_tab.renew_license=Renew {APPNAME}
 pro.home_tab.renew_license=PowerFolder\u7eed\u8d39
-#orig#pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.home_tab.upgrade_powerfolder=\u5347\u7ea7PowerFolder
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=\u901a\u8fc7HTTP\u96a7\u9053\u8fde\u63a5
@@ -2060,7 +2071,7 @@ pro.wizard.activation.computers_allowed=\u8bb8\u53ef\u7684\u8ba1\u7b97\u673a\uff
 pro.wizard.activation.computers_found=\u627e\u5230\u7684\u8ba1\u7b97\u673a
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=\u8bf7\u786e\u8ba4\u4ee5\u4e0b\u7684\u6fc0\u6d3b\u6570\u636e\u3002
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=\u8054\u7cfbPowerFolder\u652f\u6301
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=\u65e0\u6548\u7684\u8bb8\u53ef\u8bc1
@@ -2094,7 +2105,7 @@ pro.wizard.activation.number_of_computers=\u8bb8\u53ef\u7684\u8ba1\u7b97\u673a
 pro.wizard.activation.one_key_available=\u767b\u5f55\u6210\u529f\u3002\u83b7\u53d6\u4e00\u4e2a\u8bb8\u53ef\u8bc1\u7684key\u6587\u4ef6\u3002
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=\u70b9\u51fb\u8fd9\u91cc\u8ba2\u8d2d\u989d\u5916\u7684\u8bb8\u53ef\u8bc1
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=\u5347\u7ea7PowerFolder
 #orig#pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_confirm=\u786e\u8ba4
@@ -2220,6 +2231,9 @@ settings_tab.move_error.other=\u79fb\u52a8\u6587\u4ef6\u5939\u65f6\u53d1\u751f\u
 settings_tab.move_error.temp=\u4e0d\u80fd\u521b\u5efa\u4e34\u65f6\u6587\u4ef6\u5939
 #orig#settings_tab.move_error.title=Error moving folder contents
 settings_tab.move_error.title=\u79fb\u52a8\u6587\u4ef6\u5939\u5185\u5bb9\u51fa\u9519
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 #orig#settings_tab.preview_warning_convert=Convert
 settings_tab.preview_warning_convert=\u8f6e\u6362
 #orig#settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
@@ -2378,14 +2392,12 @@ transfer.problem.transfer.broken=\u4f20\u8f93\u635f\u574f
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=\u5b58\u5728\u4e00\u4e2a\u4f20\u8f93\u5f02\u5e38\uff08TransferException\uff09\: {0}
 
-#orig#transfer_mode.auto_download_friends.name=Auto-download friends
-transfer_mode.auto_download_friends.name=\u81ea\u52a8\u4e0b\u8f7d\u597d\u53cb
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=\u81ea\u52a8\u4e0b\u8f7d
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=\u81ea\u5b9a\u4e49\u914d\u7f6e
@@ -2398,7 +2410,7 @@ transfer_mode.manual_synchronization.name=\u624b\u52a8\u540c\u6b65
 #orig#transfer_mode.no_sync.name=No synchronization
 transfer_mode.no_sync.name=\u4e0d\u540c\u6b65
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=\u5df2\u5b8c\u6210 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u6b63\u5728\u590d\u5236\u6570\u636e
@@ -2422,7 +2434,7 @@ transfers.remote_hashing=\u6b63\u5728\u51c6\u5907
 transfers.requested=\u5df2\u8bf7\u6c42
 #orig#transfers.searching=Searching...
 transfers.searching=\u6b63\u5728\u67e5\u627e\u2026\u2026
-#orig#transfers.swarm=Swarm\: {0} members
+#orig#transfers.swarm=Multi\: {0} sources
 transfers.swarm=\u6e90\u6570\u91cf\: {0} \u6210\u5458
 #orig#transfers.to=To
 transfers.to=\u76ee\u6807
@@ -2631,8 +2643,10 @@ wizard.login_online_storage.no_os=\u4ec5\u76f4\u63a5\u540c\u6b65\u3002\u4e0d\u89
 wizard.login_online_storage.remember_password=\u8bb0\u4f4f\u5bc6\u7801
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=\u8bbe\u7f6e\u9ed8\u8ba4\u7684\u540c\u6b65\u6587\u4ef6\u5939
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -2643,7 +2657,6 @@ wizard.login_online_storage.setup_default=\u8bbe\u7f6e\u9ed8\u8ba4\u7684\u540c\u
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 #orig#wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_folder_setup.no_name.text=\u8fd8\u6ca1\u6709\u4e3a {0} \u8f93\u5165\u540d\u79f0
