--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -23,8 +23,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
+##about_dialog.app_description={APPDESCRIPTION}
+##about_dialog.check_for_updates.key=U
+##about_dialog.check_for_updates.text=Updates
 ##about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=\u0627\u0644\u0645\u0633\u0627\u0647\u0645\u0648\u0646
@@ -48,7 +49,6 @@ about_dialog.power_folder.text=\u0627\u0644\u0646\u0633\u062e\u0629\: {0}
 ##about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=\u0627\u0644\u062f\u0639\u0645
-##about_dialog.sync_your_world=Sync your World
 ##about_dialog.system_monitor.key=M
 ##about_dialog.system_monitor.text=Monitor
 ##about_dialog.system_monitor.tips=Display a system monitor panel
@@ -529,6 +529,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 
 ##exp_computer_view.account=User\: {0}
 ##exp_computer_view.collapse=Collapse computer details
+##exp_computer_view.connected_text=Connected
 ##exp_computer_view.expand=Expand computer details
 ##exp_computer_view.last_seen_text=Last seen online\: {0}
 ##exp_computer_view.no_login=Not logged in
@@ -569,7 +570,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 ##file_details_panel.modified_by=Modified by
 ##file_details_panel.modified_date=Modified on
 ##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
+##file_details_panel.newer_available=Newer version available ({0})
 ##file_details_panel.normal=Local available
 ##file_details_panel.not_available=Not available
 ##file_details_panel.status=Status
@@ -597,6 +598,8 @@ file_info.remote_deleted=\u062a\u0645 \u0645\u062d\u0648 \u0646\u0633\u062e\u062
 ##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 ##file_versions_table_model.size=Size
 ##file_versions_table_model.version=Version
 
@@ -727,7 +730,7 @@ folder_panel.settings_tab.removebutton.name=\u0625\u0632\u0627\u0644\u0629
 
 ##folders_tab.no_folders_available=No folders available
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=\u0627\u0634\u062a\u0631\u064a \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0645\u0646 PowerFolder
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=\u064a\u062c\u0628 \u0623\u0646 \u062a\u062d\u062f\u062b \u0625\u0644\u0649 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0623\u0648 \u062a\u0646\u0642\u0635 \u0645\u0646 \u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645
@@ -803,6 +806,8 @@ general.folder=\u0645\u062c\u0644\u062f
 general.folder_name=\u0627\u0644\u0627\u0633\u0645
 #orig#general.friday=Friday
 general.friday=\u0627\u0644\u062c\u0645\u0639\u0629
+##general.help=Help
+##general.help.key=H
 ##general.hours=Hour(s)
 ##general.inviter=Inviter
 #orig#general.local_copy_at=Local copy at
@@ -894,10 +899,12 @@ general.yesterday=\u0627\u0644\u0628\u0627\u0631\u062d\u0629
 ##home_tab.online_storage.title=Account
 ##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 ##home_tab.status=Status
-##home_tab.sync_eta=All folders will be synchronized {0}
-##home_tab.sync_unknown=Synchronization date unknown
-##home_tab.synchronizing=Synchronization in progress...
-##home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_eta=Estimated synchronized\: {0}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+##home_tab.tell_friend.text=Tell someone about {APPNAME}
 ##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 ##home_tab.total={0} total
 ##home_tab.you_have=You have
@@ -957,7 +964,7 @@ line_speed.upload_speed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\
 ##low_memory.error.text={APPNAME} requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 ##low_memory.error.title=Out of memory
 ##low_memory.increase=Increase Memory
-##low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+##low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 ##low_memory.title=Low memory
 
 ##main_frame.inline_info_close.tip=Close information panel
@@ -1152,11 +1159,17 @@ preferences.dialog.exit_behavior=\u0633\u0644\u0648\u0643 \u0627\u0644\u062e\u06
 preferences.dialog.exit_behavior.exit=\u062e\u0631\u0648\u062c \u0645\u0646 \u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=\u062a\u0635\u063a\u064a\u0631 \u0644\u0634\u0631\u064a\u0637 \u0627\u0644\u0645\u0647\u0627\u0645
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 ##preferences.dialog.folder_sync_text=Warning day(s)
 ##preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=\u0639\u0627\u0645
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=\u0642\u0627\u0626\u0645\u0629 \u0627\u064a \u0628\u064a \u0627\u0644\u0634\u0628\u0643\u0629
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1280,7 +1293,7 @@ preferences.dialog.warnningMessage=\u062a\u062d\u0630\u064a\u0631
 ##pro.home_tab.remaining={0} day(s) remaining
 ##pro.home_tab.remaining.tips=Your license will expire in {0} days
 ##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 #orig#pro.http.options.directconnect=Direct connection to Internet
@@ -1357,7 +1370,7 @@ pro.security.securitysettings=\u0625\u0639\u062f\u0627\u062f\u062a \u0627\u0644\
 ##pro.wizard.activation.computers_allowed=Computers allowed\:
 ##pro.wizard.activation.computers_found=Computers found\:
 ##pro.wizard.activation.confirm_key=Please confirm the following activation data.
-##pro.wizard.activation.contact_support=Contact the support
+##pro.wizard.activation.contact_support=Contact support
 ##pro.wizard.activation.error_invalid_key=Invalid license key
 ##pro.wizard.activation.error_reading_file=Error while reading license key file
 ##pro.wizard.activation.error_unable_to_read=Unable to read
@@ -1374,7 +1387,7 @@ pro.security.securitysettings=\u0625\u0639\u062f\u0627\u062f\u062a \u0627\u0644\
 ##pro.wizard.activation.number_of_computers=Allowed computers
 ##pro.wizard.activation.one_key_available=Login successful. Got one license key.
 ##pro.wizard.activation.order_additional=Order additional licenses here
-##pro.wizard.activation.order_now=Upgrade {APPNAME}
+##pro.wizard.activation.order_now=Buy {APPNAME} now
 ##pro.wizard.activation.password_confirm=Confirm
 ##pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 ##pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
@@ -1443,6 +1456,9 @@ send_invitation.placetostore=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u
 ##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 ##settings_tab.move_error.temp=Could not create temporary folder
 ##settings_tab.move_error.title=Error moving folder contents
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 ##settings_tab.preview_warning_convert=Convert
 ##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 ##settings_tab.preview_warning_title=Convert
@@ -1555,12 +1571,11 @@ transfer.problem.temp.file.write=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=\u0643\u0627\u0646 \u0647\u0646\u0627\u0643 \u0646\u0642\u0644 \u0645\u0633\u062a\u062b\u0646\u0649\: {0}
 
-##transfer_mode.auto_download_friends.name=Auto-download friends
 ##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 ##transfer_mode.custom.name=Custom profile
 ##transfer_mode.disabled.name=Disabled
@@ -1568,7 +1583,7 @@ transfer.problem.transfer.exception=\u0643\u0627\u0646 \u0647\u0646\u0627\u0643 
 ##transfer_mode.manual_synchronization.name=Manual synchronization
 ##transfer_mode.no_sync.name=No synchronization
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=\u0645\u0643\u062a\u0645\u0644 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=\u0646\u0633\u062e \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a
@@ -1592,7 +1607,7 @@ transfers.remote_hashing=\u064a\u062a\u0645 \u0627\u0644\u062a\u062d\u0636\u064a
 transfers.requested=\u064a\u062a\u0645 \u0627\u0644\u0637\u0644\u0628
 #orig#transfers.searching=Searching...
 transfers.searching=\u064a\u062a\u0645 \u0627\u0644\u0628\u062d\u062b...
-##transfers.swarm=Swarm\: {0} members
+##transfers.swarm=Multi\: {0} sources
 #orig#transfers.to=To
 transfers.to=\u0625\u0644\u0649
 #orig#transfers.verifying=Finalizing
@@ -1719,8 +1734,10 @@ wizard.load_invitation.select_file=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u
 ##wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
 ##wizard.login_online_storage.remember_password=Remember password
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -1731,7 +1748,6 @@ wizard.load_invitation.select_file=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
