--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -23,9 +23,10 @@
 # http://www.powerfolder.com
 #
 
-#orig#about_dialog.check_for_updates.key=C
+##about_dialog.app_description={APPDESCRIPTION}
+#orig#about_dialog.check_for_updates.key=U
 about_dialog.check_for_updates.key=C
-#orig#about_dialog.check_for_updates.text=Check
+#orig#about_dialog.check_for_updates.text=Updates
 about_dialog.check_for_updates.text=Indagar
 #orig#about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 about_dialog.check_for_updates.tips=Indagar actualizaciones de {APPNAME}
@@ -57,8 +58,6 @@ about_dialog.send_bug_report.text=Reporte
 about_dialog.send_bug_report.tips=Mandar reporte de bug a {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=Soporte T\u00e9cnico
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=Syncroniza tu Mundo
 #orig#about_dialog.system_monitor.key=M
 about_dialog.system_monitor.key=S
 #orig#about_dialog.system_monitor.text=Monitor
@@ -866,6 +865,7 @@ estimation.unknown=incierto
 exp_computer_view.account=Usuario\: {0}
 #orig#exp_computer_view.collapse=Collapse computer details
 exp_computer_view.collapse=Colapsar detalles de computadora
+##exp_computer_view.connected_text=Connected
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=Expander detalles de computadora
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
@@ -943,7 +943,7 @@ file_details_panel.modified_by=Modificado por
 file_details_panel.modified_date=Moodificado el
 #orig#file_details_panel.name=Name
 file_details_panel.name=Nombre
-#orig#file_details_panel.newer_available=Newer version available
+#orig#file_details_panel.newer_available=Newer version available ({0})
 file_details_panel.newer_available=Versi\u00f3n mas reciente disponible
 #orig#file_details_panel.normal=Local available
 file_details_panel.normal=Local disponible
@@ -981,6 +981,8 @@ file_version_tab.no_versions_available=Historial de versiones no disponible
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=Fecha
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 #orig#file_versions_table_model.size=Size
 file_versions_table_model.size=Tama\u00f1oo
 #orig#file_versions_table_model.version=Version
@@ -1205,7 +1207,7 @@ folders_list.online_folders=Carpetas en linea
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=Carpetas no estan disponibles
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=Adquirir {APPNAME}
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=Is requisito instalar la version Profesional o en ausencia, reducir el uso.
@@ -1295,6 +1297,8 @@ general.folder=Carpeta
 general.folder_name=Nombre
 #orig#general.friday=Friday
 general.friday=Viernes
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=Hora(s)
 #orig#general.inviter=Inviter
@@ -1431,12 +1435,13 @@ home_tab.online_storage.title=Cuenta
 #orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 home_tab.online_storage.usage=Uso en linea\: {0} ({1}%)
 ##home_tab.status=Status
-#orig#home_tab.sync_eta=All folders will be synchronized {0}
+#orig#home_tab.sync_eta=Estimated synchronized\: {0}
 home_tab.sync_eta=Todas las carpetas ser\u00e1n sincronizadas en {0}
-##home_tab.sync_unknown=Synchronization date unknown
-#orig#home_tab.synchronizing=Synchronization in progress...
-home_tab.synchronizing=Sincronizaci\u00f3n en progreso...
-#orig#home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.text=Dile a un amigo que usas {APPNAME}
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.tell_friend.tip=Haz un click aqu\u00ed para mandar un correo electr\u00f3nico a tus amigos invit\u00e1ndolos a usar {APPNAME}
@@ -1510,7 +1515,7 @@ low_memory.error.text={APPNAME} necesita mas memoria in la configuraci\u00f3n.\n
 low_memory.error.title=Memoria agotada.
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Incrementar Memoria
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text={APPNAME} tiene escasez de memoria disponible.\n\n{APPNAME} puede intentar incrementar la memoria disponible.
 #orig#low_memory.title=Low memory
 low_memory.title=Escasez de Memoria
@@ -1751,13 +1756,19 @@ preferences.dialog.exit_behavior=Acci\u00f3n al cerrar
 preferences.dialog.exit_behavior.exit=Salir del programa
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=Minimizar en la Bandeja del Sistema
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 #orig#preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.folder_sync_text=Dia(s) para advertir
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_warn.use=Poner advertencia si la carpeta no ha sido actualizada
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=General
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=Lista the IP en el LAN
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1933,7 +1944,7 @@ pro.home_tab.remaining={0} dia(s) restantes
 pro.home_tab.remaining.tips=Su licencia va a expirar en {0} d\u00edas
 #orig#pro.home_tab.renew_license=Renew {APPNAME}
 pro.home_tab.renew_license=Renovar {APPNAME}
-#orig#pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.home_tab.upgrade_powerfolder=Mejorar {APPNAME}
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Coneciones HTTP en tunel via HTTP
@@ -2037,7 +2048,7 @@ pro.wizard.activation.computers_allowed=Computadaras con permiso
 pro.wizard.activation.computers_found=Computadoras halladas\:\\
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=Favor de confirmar los datos de activaci\u00f3n.
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=Contactar el soporte t\u00e9cnico de {APPNAME}
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=Llave Licencia inv\u00e1lida
@@ -2071,7 +2082,7 @@ pro.wizard.activation.number_of_computers=Computadoras con permiso
 pro.wizard.activation.one_key_available=Accesso exitoso. Llave licencia adquirida.
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=Haga un click aqu\u00ed para a\u00f1oadir licencias adicionales
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=Haga un click aqu\u00ed para ordenar {APPNAME}
 #orig#pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_confirm=Confirmar
@@ -2197,6 +2208,9 @@ settings_tab.move_error.other=No hubo errores al mover carpeta\:\n{0}
 settings_tab.move_error.temp=No es posible create carpeta temporal
 #orig#settings_tab.move_error.title=Error moving folder contents
 settings_tab.move_error.title=Error al mover contenido de carpeta
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 #orig#settings_tab.preview_warning_convert=Convert
 settings_tab.preview_warning_convert=Convertir
 #orig#settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
@@ -2354,14 +2368,12 @@ transfer.problem.transfer.broken=Transferencia rota
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=Existe una excepci\u00f3n de transferencia (TransferException)\: {0}
 
-#orig#transfer_mode.auto_download_friends.name=Auto-download friends
-transfer_mode.auto_download_friends.name=Descarga-autom\u00e1tica de amigos
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=Descarga autom\u00e1tica
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=Perfil personalizado
@@ -2374,7 +2386,7 @@ transfer_mode.manual_synchronization.name=Sincronizaci\u00f3n manual
 #orig#transfer_mode.no_sync.name=No synchronization
 transfer_mode.no_sync.name=No sincronizar
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=terminados {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copiando informaci\u00f3n
@@ -2398,7 +2410,7 @@ transfers.remote_hashing=Esperando un pedido
 transfers.requested=pedidos
 #orig#transfers.searching=Searching...
 transfers.searching=Buscando...
-#orig#transfers.swarm=Swarm\: {0} members
+#orig#transfers.swarm=Multi\: {0} sources
 transfers.swarm=Enjambre\: {0} miembros
 #orig#transfers.to=To
 transfers.to=Para
@@ -2601,8 +2613,10 @@ wizard.login_online_storage.no_os=Solo sinc directo. No guardar mis archivos en 
 wizard.login_online_storage.remember_password=Recordar contrase\u00f1oa
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Configurar la carpeta ha ser sincronizada por omisi\u00f3n.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -2613,7 +2627,6 @@ wizard.login_online_storage.setup_default=Configurar la carpeta ha ser sincroniz
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 #orig#wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_folder_setup.no_name.text=No nombre ha sido tecleado para {0}
