--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -23,8 +23,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
+##about_dialog.app_description={APPDESCRIPTION}
+##about_dialog.check_for_updates.key=U
+##about_dialog.check_for_updates.text=Updates
 ##about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=Contributeurs
@@ -50,8 +51,6 @@ about_dialog.power_folder.used=M\u00e9moire utilis\u00e9e\: {0}Mo
 ##about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=Support
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=Sync your World
 ##about_dialog.system_monitor.key=M
 ##about_dialog.system_monitor.text=Monitor
 ##about_dialog.system_monitor.tips=Display a system monitor panel
@@ -564,6 +563,7 @@ estimation.unknown=Inconnue
 
 ##exp_computer_view.account=User\: {0}
 ##exp_computer_view.collapse=Collapse computer details
+##exp_computer_view.connected_text=Connected
 ##exp_computer_view.expand=Expand computer details
 ##exp_computer_view.last_seen_text=Last seen online\: {0}
 ##exp_computer_view.no_login=Not logged in
@@ -604,7 +604,7 @@ estimation.unknown=Inconnue
 ##file_details_panel.modified_by=Modified by
 ##file_details_panel.modified_date=Modified on
 ##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
+##file_details_panel.newer_available=Newer version available ({0})
 ##file_details_panel.normal=Local available
 ##file_details_panel.not_available=Not available
 ##file_details_panel.status=Status
@@ -633,6 +633,8 @@ file_info.remote_deleted=Nouvelle version effac\u00e9e par un autre utilisateur
 ##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 ##file_versions_table_model.size=Size
 ##file_versions_table_model.version=Version
 
@@ -776,7 +778,7 @@ folder_remove.dialog.title=Enlever le dossier PowerFolder {0}?
 
 ##folders_tab.no_folders_available=No folders available
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=D\u00e9couvrez PowerFolder Pro
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=Il est n\u00e9cessaire de passer \u00e0 la version Pro ou de reduire votre utilisation.
@@ -859,6 +861,8 @@ general.folder=Dossier(s) partag\u00e9(s)
 general.folder_name=Nom
 #orig#general.friday=Friday
 general.friday=Vendredi
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=Heure(s)
 #orig#general.inviter=Inviter
@@ -961,10 +965,12 @@ general.yesterday=Hier
 ##home_tab.online_storage.title=Account
 ##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 ##home_tab.status=Status
-##home_tab.sync_eta=All folders will be synchronized {0}
-##home_tab.sync_unknown=Synchronization date unknown
-##home_tab.synchronizing=Synchronization in progress...
-##home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_eta=Estimated synchronized\: {0}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+##home_tab.tell_friend.text=Tell someone about {APPNAME}
 ##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 ##home_tab.total={0} total
 ##home_tab.you_have=You have
@@ -1030,7 +1036,7 @@ low_memory.do_nothing=Ne rien faire
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Augmenter la m\u00e9moire
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=PowerFolder d\u00e9passe la quantit\u00e9 de m\u00e9moire disponible.\n\nPowerFolder peut tenter d'augmenter la m\u00e9moire disponible.
 #orig#low_memory.title=Low memory
 low_memory.title=Manque de m\u00e9moire
@@ -1237,11 +1243,17 @@ preferences.dialog.exit_behavior=Action de fermeture
 preferences.dialog.exit_behavior.exit=Quitter le programme
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=R\u00e9duire la fen\u00eatre dans la barre des t\u00e2ches
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 ##preferences.dialog.folder_sync_text=Warning day(s)
 ##preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=Param\u00e9trage global
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=Liste IP du LAN
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1381,7 +1393,7 @@ pro.download_csv.key=T
 ##pro.home_tab.remaining={0} day(s) remaining
 ##pro.home_tab.remaining.tips=Your license will expire in {0} days
 ##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 #orig#pro.http.options.directconnect=Direct connection to Internet
@@ -1466,7 +1478,7 @@ pro.wizard.activation.computers_allowed=Ordinateur(s) autoris\u00e9(s)\:
 pro.wizard.activation.computers_found=Ordinateur(s) trouv\u00e9(s)\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=Merci de confirmer les informations d'activation suivantes.
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=Contacter le support de PowerFolder
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=Clef de licence invalide
@@ -1497,7 +1509,7 @@ pro.wizard.activation.number_of_computers=Ordinateurs autoris\u00e9s
 pro.wizard.activation.one_key_available=Login r\u00e9ussi. Clef de licence obtenue.
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=Cliquer ici pour ajouter des licences
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=Cliquer ici pour commander PowerFolder Pro
 ##pro.wizard.activation.password_confirm=Confirm
 ##pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
@@ -1587,6 +1599,9 @@ settings_tab.download_script.select=S\u00e9lectionner
 ##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 ##settings_tab.move_error.temp=Could not create temporary folder
 ##settings_tab.move_error.title=Error moving folder contents
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 ##settings_tab.preview_warning_convert=Convert
 ##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 ##settings_tab.preview_warning_title=Convert
@@ -1703,12 +1718,11 @@ transfer.problem.transfer.broken=Transfert interrompu
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=Exception d\u00e9t\u00e9ct\u00e9e sur un transfert de fichier\: {0}
 
-##transfer_mode.auto_download_friends.name=Auto-download friends
 ##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 ##transfer_mode.custom.name=Custom profile
 ##transfer_mode.disabled.name=Disabled
@@ -1716,7 +1730,7 @@ transfer.problem.transfer.exception=Exception d\u00e9t\u00e9ct\u00e9e sur un tra
 ##transfer_mode.manual_synchronization.name=Manual synchronization
 ##transfer_mode.no_sync.name=No synchronization
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=Termin\u00e9 {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copie de donn\u00e9es en cours
@@ -1740,7 +1754,7 @@ transfers.remote_hashing=En attente de demande...
 transfers.requested=demand\u00e9
 #orig#transfers.searching=Searching...
 transfers.searching=Recherche...
-##transfers.swarm=Swarm\: {0} members
+##transfers.swarm=Multi\: {0} sources
 #orig#transfers.to=To
 transfers.to=To
 #orig#transfers.verifying=Finalizing
@@ -1893,8 +1907,10 @@ wizard.load_invitation.select_file=Merci de s\u00e9lectionner le fichier d'invit
 ##wizard.login_online_storage.remember_password=Remember password
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Configurer le dossier de synchronisation par d\u00e9faut.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -1905,7 +1921,6 @@ wizard.login_online_storage.setup_default=Configurer le dossier de synchronisati
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
