--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -23,9 +23,10 @@
 # http://www.powerfolder.com
 #
 
-#orig#about_dialog.check_for_updates.key=C
+##about_dialog.app_description={APPDESCRIPTION}
+#orig#about_dialog.check_for_updates.key=U
 about_dialog.check_for_updates.key=C
-#orig#about_dialog.check_for_updates.text=Check
+#orig#about_dialog.check_for_updates.text=Updates
 about_dialog.check_for_updates.text=Controlla
 #orig#about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 about_dialog.check_for_updates.tips=Controlla aggiornamenti per PowerFolder
@@ -57,8 +58,6 @@ about_dialog.send_bug_report.text=Report
 about_dialog.send_bug_report.tips=Invia un report a PowerFolder
 #orig#about_dialog.support=Support
 about_dialog.support=Supporto
-#orig#about_dialog.sync_your_world=Sync your World
-about_dialog.sync_your_world=Sincronizza il tuo Mondo
 #orig#about_dialog.system_monitor.key=M
 about_dialog.system_monitor.key=M
 #orig#about_dialog.system_monitor.text=Monitor
@@ -866,6 +865,7 @@ estimation.unknown=sconosciuto
 exp_computer_view.account=Utente\: {0}
 #orig#exp_computer_view.collapse=Collapse computer details
 exp_computer_view.collapse=Collassa dettagli computer
+##exp_computer_view.connected_text=Connected
 #orig#exp_computer_view.expand=Expand computer details
 exp_computer_view.expand=Espandi dettagli computer
 #orig#exp_computer_view.last_seen_text=Last seen online\: {0}
@@ -943,7 +943,7 @@ file_details_panel.modified_by=Modificato da
 file_details_panel.modified_date=Modificato il
 #orig#file_details_panel.name=Name
 file_details_panel.name=Nome
-#orig#file_details_panel.newer_available=Newer version available
+#orig#file_details_panel.newer_available=Newer version available ({0})
 file_details_panel.newer_available=E' disponibile una versione pi\u00f9 aggiornata
 #orig#file_details_panel.normal=Local available
 file_details_panel.normal=Locale disponibile
@@ -981,6 +981,8 @@ file_version_tab.no_versions_available=Non \u00e8 disponibile la lista delle ver
 
 #orig#file_versions_table_model.date=Date
 file_versions_table_model.date=Data
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 #orig#file_versions_table_model.size=Size
 file_versions_table_model.size=Dimensione
 #orig#file_versions_table_model.version=Version
@@ -1205,7 +1207,7 @@ folders_list.online_folders=Cartelle Online
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=Nessuna cartella disponibile
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=Acquista PowerFolder Pro
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=E' necessario aggiornare alla Versione Pro oppure ridurre l'utilizzo.
@@ -1295,6 +1297,8 @@ general.folder=Cartella
 general.folder_name=Nome
 #orig#general.friday=Friday
 general.friday=Venerd\u00ec
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=Ora(e)
 #orig#general.inviter=Inviter
@@ -1431,12 +1435,13 @@ home_tab.online_storage.title=Account
 #orig#home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 home_tab.online_storage.usage=Utilizzo Online\: {0} ({1}%)
 ##home_tab.status=Status
-#orig#home_tab.sync_eta=All folders will be synchronized {0}
+#orig#home_tab.sync_eta=Estimated synchronized\: {0}
 home_tab.sync_eta=Tutte le cartelle saranno sincronizzate {0}
-##home_tab.sync_unknown=Synchronization date unknown
-#orig#home_tab.synchronizing=Synchronization in progress...
-home_tab.synchronizing=Sincronizzazione in corso...
-#orig#home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+#orig#home_tab.tell_friend.text=Tell someone about {APPNAME}
 home_tab.tell_friend.text=Segnala PowerFolder ad un amico
 #orig#home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 home_tab.tell_friend.tip=Clicca qui per inviare un email per invitare amici s PowerFolder
@@ -1510,7 +1515,7 @@ low_memory.error.text=PowerFolder richiede pi\u00f9 memoria nella tua configuraz
 low_memory.error.title=Memoria esaurita
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Aumenta Memoria
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=PowerFolder sta esaurendo la memoria disponibile.\n\nPowerFolder pu\u00f2 cercare di aumentare la memoria disponibile.
 #orig#low_memory.title=Low memory
 low_memory.title=Poca memoria
@@ -1751,13 +1756,19 @@ preferences.dialog.exit_behavior=Comportamento d'uscita
 preferences.dialog.exit_behavior.exit=Esci dal programma
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=Minimizza sulla barra di sistema
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 #orig#preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.folder_sync_text=Giorno(i) di avviso
 #orig#preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_warn.use=Avvisa se cartelle non sincronizzate
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=Generale
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=Lista di IP nella LAN
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1933,7 +1944,7 @@ pro.home_tab.remaining={0} giorno(i) rimanente(i)
 pro.home_tab.remaining.tips=La tua licenza finir\u00e0 fra {0} giorni
 #orig#pro.home_tab.renew_license=Renew {APPNAME}
 pro.home_tab.renew_license=Rinnova PowerFolder
-#orig#pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+#orig#pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.home_tab.upgrade_powerfolder=Aggiorna PowerFolder
 #orig#pro.http.description=HTTP connections tunneled via HTTP
 pro.http.description=Connessione HTTP tunnellizzata HTTP
@@ -2037,7 +2048,7 @@ pro.wizard.activation.computers_allowed=Computers abilitati\:
 pro.wizard.activation.computers_found=Computers trovati\:
 #orig#pro.wizard.activation.confirm_key=Please confirm the following activation data.
 pro.wizard.activation.confirm_key=Si prega di confermare i seguenti dati di attivazione.
-#orig#pro.wizard.activation.contact_support=Contact the support
+#orig#pro.wizard.activation.contact_support=Contact support
 pro.wizard.activation.contact_support=Contatta il supporto di PowerFolder
 #orig#pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_invalid_key=Codice della licenza non valido
@@ -2071,7 +2082,7 @@ pro.wizard.activation.number_of_computers=Computer abilitati
 pro.wizard.activation.one_key_available=Login effettuato con successo. Ricevuto un codice di licenza.
 #orig#pro.wizard.activation.order_additional=Order additional licenses here
 pro.wizard.activation.order_additional=Cliccare qui per ordinare ulteriori licenze
-#orig#pro.wizard.activation.order_now=Upgrade {APPNAME}
+#orig#pro.wizard.activation.order_now=Buy {APPNAME} now
 pro.wizard.activation.order_now=Cliccare qui per ordinare PowerFolder Pro
 #orig#pro.wizard.activation.password_confirm=Confirm
 pro.wizard.activation.password_confirm=Conferma
@@ -2197,6 +2208,9 @@ settings_tab.move_error.other=C'\u00e8 stato un errore nello spostamento della c
 settings_tab.move_error.temp=Impossibile creare cartella temporanea
 #orig#settings_tab.move_error.title=Error moving folder contents
 settings_tab.move_error.title=Errore spostamento contenuti cartella
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 #orig#settings_tab.preview_warning_convert=Convert
 settings_tab.preview_warning_convert=Converti
 #orig#settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
@@ -2353,14 +2367,12 @@ transfer.problem.transfer.broken=Trasferimento interrotto
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=Si \u00e8 verificata una TransferException per {0}\: {1}
 
-#orig#transfer_mode.auto_download_friends.name=Auto-download friends
-transfer_mode.auto_download_friends.name=Auto-download amici
 #orig#transfer_mode.automatic_download.name=Automatic download
 transfer_mode.automatic_download.name=Download Automatico
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 #orig#transfer_mode.custom.name=Custom profile
 transfer_mode.custom.name=Profilo personalizzato
@@ -2373,7 +2385,7 @@ transfer_mode.manual_synchronization.name=Sincronizzazione manuale
 #orig#transfer_mode.no_sync.name=No synchronization
 transfer_mode.no_sync.name=Nessuna sincronizzazione
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=completato {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Copia dei dati in corso
@@ -2397,7 +2409,7 @@ transfers.remote_hashing=In attesa di richieste
 transfers.requested=richiesto
 #orig#transfers.searching=Searching...
 transfers.searching=Ricerca...
-#orig#transfers.swarm=Swarm\: {0} members
+#orig#transfers.swarm=Multi\: {0} sources
 transfers.swarm=Swarm\: {0} membri
 #orig#transfers.to=To
 transfers.to=A
@@ -2601,8 +2613,10 @@ wizard.login_online_storage.no_os=Solo sincronizzazione diretta. Non caricare i 
 wizard.login_online_storage.remember_password=Ricorda password
 #orig#wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.setup_default=Impostazioni di default della cartella sincronizzata.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -2613,7 +2627,6 @@ wizard.login_online_storage.setup_default=Impostazioni di default della cartella
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 #orig#wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_folder_setup.no_name.text=Nessun nome inserito per {0}
