--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -23,8 +23,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
+##about_dialog.app_description={APPDESCRIPTION}
+##about_dialog.check_for_updates.key=U
+##about_dialog.check_for_updates.text=Updates
 ##about_dialog.check_for_updates.tips=Check for {APPNAME} updates
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=Wsp\u00f3\u0142tw\u00f3rcy
@@ -50,7 +51,6 @@ about_dialog.power_folder.used=U\u017cyta pami\u0119\u0107\: {0}MB
 ##about_dialog.send_bug_report.tips=Send a bug report to {APPNAME}
 #orig#about_dialog.support=Support
 about_dialog.support=Wsparcie Techniczne
-##about_dialog.sync_your_world=Sync your World
 ##about_dialog.system_monitor.key=M
 ##about_dialog.system_monitor.text=Monitor
 ##about_dialog.system_monitor.tips=Display a system monitor panel
@@ -534,6 +534,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 
 ##exp_computer_view.account=User\: {0}
 ##exp_computer_view.collapse=Collapse computer details
+##exp_computer_view.connected_text=Connected
 ##exp_computer_view.expand=Expand computer details
 ##exp_computer_view.last_seen_text=Last seen online\: {0}
 ##exp_computer_view.no_login=Not logged in
@@ -574,7 +575,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 ##file_details_panel.modified_by=Modified by
 ##file_details_panel.modified_date=Modified on
 ##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
+##file_details_panel.newer_available=Newer version available ({0})
 ##file_details_panel.normal=Local available
 ##file_details_panel.not_available=Not available
 ##file_details_panel.status=Status
@@ -602,6 +603,8 @@ file_info.remote_deleted=Nowsza wersja usuni\u0119ta przez innego u\u017cytkowni
 ##file_version_tab.size=Size\: {0}
 
 ##file_versions_table_model.date=Date
+##file_versions_table_model.local=Local version
+##file_versions_table_model.online=Online version
 ##file_versions_table_model.size=Size
 ##file_versions_table_model.version=Version
 
@@ -732,7 +735,7 @@ folder_panel.settings_tab.removebutton.name=Usu\u0144
 
 ##folders_tab.no_folders_available=No folders available
 
-#orig#free_limit_dialog.buy_pro=Buy {APPNAME}
+#orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
 free_limit_dialog.buy_pro=Kup PowerFolder Pro
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=Uaktualnij PowerFolder do wersji Pro lub zmiejsz u\u017cycie.
@@ -809,6 +812,8 @@ general.folder=Folder
 general.folder_name=Nazwa
 #orig#general.friday=Friday
 general.friday=Pi\u0105tek
+##general.help=Help
+##general.help.key=H
 #orig#general.hours=Hour(s)
 general.hours=Godzina
 ##general.inviter=Inviter
@@ -903,10 +908,12 @@ general.yesterday=wczoraj
 ##home_tab.online_storage.title=Account
 ##home_tab.online_storage.usage=Online usage\: {0} ({1}%)
 ##home_tab.status=Status
-##home_tab.sync_eta=All folders will be synchronized {0}
-##home_tab.sync_unknown=Synchronization date unknown
-##home_tab.synchronizing=Synchronization in progress...
-##home_tab.tell_friend.text=Tell a friend about {APPNAME}
+##home_tab.sync_eta=Estimated synchronized\: {0}
+##home_tab.sync_unknown=Estimated synchronized\: Unknown
+##home_tab.synchronizing.0=Synchronization in progress.
+##home_tab.synchronizing.1=Synchronization in progress..
+##home_tab.synchronizing.2=Synchronization in progress...
+##home_tab.tell_friend.text=Tell someone about {APPNAME}
 ##home_tab.tell_friend.tip=Click here to send an email inviting friends to use {APPNAME}
 ##home_tab.total={0} total
 ##home_tab.you_have=You have
@@ -970,7 +977,7 @@ low_memory.do_nothing=Nic nie r\u00f3b
 ##low_memory.error.title=Out of memory
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=Zwi\u0119ksz Pami\u0119\u0107
-#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.
+#orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
 low_memory.text=Programowi PowerFolder zaczyna brakowa\u0107 pami\u0119ci.\n\nPowerFolder mo\u017ce zwiekszy\u0107 poziom dost\u0119pnej pami\u0119ci.
 #orig#low_memory.title=Low memory
 low_memory.title=Ma\u0142o pami\u0119ci
@@ -1170,11 +1177,17 @@ preferences.dialog.exit_behavior=Zachowanie podczas wyj\u015bcia
 preferences.dialog.exit_behavior.exit=Wyjd\u017a z programu
 #orig#preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior.minimize=Minimalizuj do tacki systemowej
+##preferences.dialog.filesystem.watch=Instant file change detection
+##preferences.dialog.filesystem.watch.tooltip=Instantly detects new, changed or deleted files by watching the filesystem. Applies to all folders with periodic scanning only. Ignores scan times.
 ##preferences.dialog.folder_sync_text=Warning day(s)
 ##preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 #orig#preferences.dialog.general.title=General
 preferences.dialog.general.title=Og\u00f3lne
-##preferences.dialog.inline_info=Display information panel inline
+##preferences.dialog.information_panel=Information panel
+##preferences.dialog.information_panel_left=Panel to left of the main panel
+##preferences.dialog.information_panel_right=Panel to right of the main panel
+##preferences.dialog.information_panel_separate=Separate window
+##preferences.dialog.inline_info=Display detail information in same window
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=Lista adres\u00f3w IP w LAN
 #orig#preferences.dialog.lan_line_settings=LAN speed
@@ -1301,7 +1314,7 @@ preferences.dialog.warnningMessage=Ostrze\u017cenie
 ##pro.home_tab.remaining={0} day(s) remaining
 ##pro.home_tab.remaining.tips=Your license will expire in {0} days
 ##pro.home_tab.renew_license=Renew {APPNAME}
-##pro.home_tab.upgrade_powerfolder=Upgrade {APPNAME}
+##pro.home_tab.upgrade_powerfolder=Buy {APPNAME} now
 ##pro.http.description=HTTP connections tunneled via HTTP
 ##pro.http.name=HTTP tunneled connections
 #orig#pro.http.options.directconnect=Direct connection to Internet
@@ -1378,7 +1391,7 @@ pro.security.securitysettings=Ustawienia Bezpiecze\u0144stwa
 ##pro.wizard.activation.computers_allowed=Computers allowed\:
 ##pro.wizard.activation.computers_found=Computers found\:
 ##pro.wizard.activation.confirm_key=Please confirm the following activation data.
-##pro.wizard.activation.contact_support=Contact the support
+##pro.wizard.activation.contact_support=Contact support
 ##pro.wizard.activation.error_invalid_key=Invalid license key
 ##pro.wizard.activation.error_reading_file=Error while reading license key file
 ##pro.wizard.activation.error_unable_to_read=Unable to read
@@ -1395,7 +1408,7 @@ pro.security.securitysettings=Ustawienia Bezpiecze\u0144stwa
 ##pro.wizard.activation.number_of_computers=Allowed computers
 ##pro.wizard.activation.one_key_available=Login successful. Got one license key.
 ##pro.wizard.activation.order_additional=Order additional licenses here
-##pro.wizard.activation.order_now=Upgrade {APPNAME}
+##pro.wizard.activation.order_now=Buy {APPNAME} now
 ##pro.wizard.activation.password_confirm=Confirm
 ##pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
 ##pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
@@ -1468,6 +1481,9 @@ send_invitation.placetostore=Wybierz miejsce, w kt\u00f3rym chcesz zachowa\u0107
 ##settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 ##settings_tab.move_error.temp=Could not create temporary folder
 ##settings_tab.move_error.title=Error moving folder contents
+##settings_tab.offer_maintenance.cleanup_button=Cleanup
+##settings_tab.offer_maintenance.text=Cleanup file archive?
+##settings_tab.offer_maintenance.title=Cleanup archive
 ##settings_tab.preview_warning_convert=Convert
 ##settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 ##settings_tab.preview_warning_title=Convert
@@ -1580,12 +1596,11 @@ transfer.problem.temp.file.write=Nie mo\u017cna zapisywa\u0107 do pliku tymczaso
 #orig#transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfer.problem.transfer.exception=Wyst\u0105pi\u0142 wyj\u0105tek\: TransferException\: {0}
 
-##transfer_mode.auto_download_friends.name=Auto-download friends
 ##transfer_mode.automatic_download.name=Automatic download
-##transfer_mode.automatic_synchronization.name=Auto sync (every minute)
-##transfer_mode.automatic_synchronization_10min.name=Auto sync (every 10 minutes)
-##transfer_mode.backup_source.name=Backup source (every 5 minutes)
-##transfer_mode.backup_source_hour.name=Backup source (every hour)
+##transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
+##transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
+##transfer_mode.backup_source.name=Backup source (5 minutes)
+##transfer_mode.backup_source_hour.name=Backup source (1 hour)
 ##transfer_mode.backup_target.name=Backup target
 ##transfer_mode.custom.name=Custom profile
 ##transfer_mode.disabled.name=Disabled
@@ -1593,7 +1608,7 @@ transfer.problem.transfer.exception=Wyst\u0105pi\u0142 wyj\u0105tek\: TransferEx
 ##transfer_mode.manual_synchronization.name=Manual synchronization
 ##transfer_mode.no_sync.name=No synchronization
 
-#orig#transfers.completed=Completed
+#orig#transfers.completed=Completed {0}
 transfers.completed=Zako\u0144czono {0}
 #orig#transfers.copying=Copying data
 transfers.copying=Kopiowanie danych
@@ -1617,7 +1632,7 @@ transfers.remote_hashing=Przygotowywanie
 transfers.requested=\u017b\u0105danie
 #orig#transfers.searching=Searching...
 transfers.searching=Szukanie...
-##transfers.swarm=Swarm\: {0} members
+##transfers.swarm=Multi\: {0} sources
 #orig#transfers.to=To
 transfers.to=Do
 #orig#transfers.verifying=Finalizing
@@ -1766,8 +1781,10 @@ wizard.load_invitation.select_file=Prosz\u0119 wybra\u0107 plik zaproszenia
 ##wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
 ##wizard.login_online_storage.remember_password=Remember password
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
-##wizard.multi_file_restore_panel.button_date=Date specific version
-##wizard.multi_file_restore_panel.button_latest=Latest version
+##wizard.multi_file_restore_panel.button_date=Date specific version(s)
+##wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+##wizard.multi_file_restore_panel.button_latest=Latest version(s)
+##wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
 ##wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 ##wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 ##wizard.multi_file_restore_panel.retrieving_none=No file version information available.
@@ -1778,7 +1795,6 @@ wizard.load_invitation.select_file=Prosz\u0119 wybra\u0107 plik zaproszenia
 ##wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
 ##wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
 ##wizard.multi_file_restoring_panel.success_title=Files restored
-##wizard.multi_file_restoring_panel.title=Restoring file(s)
 ##wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 ##wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 ##wizard.multi_folder_setup.no_name.title=No name
